---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: ???
  Features:
    - Added 'Entities' search option to search for built entities of that item
    - Added 'Ground' search option to search for the item on the ground
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 7 April 2022
  Bugfixes:
    - Fixed not showing results from all planets if some planets had no results
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 7 April 2022
  Changes:
    - Changed default keybind from 'Control + F' to 'Control + Shift + F' to avoid collision with vanilla search keybind on Windows
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 7 April 2022
  Changes:
    - Increased highlight box duration from 10s to 20s
  Bugfixes:
    - Fixed crash when viewing a search result on Nauvis from a different planet (with Space Exploration)
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 7 April 2022
  Bugfixes:
    - Fixed crash when selecting a 'virtual' signal (not an item or fluid)
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 6 April 2022
  Bugfixes:
    - Fixed highlight boxes not rotating with rotatable entities (e.g. cars, trains)
    - Fixed crash when unchecking both search checkboxes
    - Fixed 'No results found' warning not appearing when the search results are empty
    - Search result GUI now uses correct styles
  Locale:
    - Added complete German translations (thanks Anders142536 on Crowdin!)
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 4 April 2022
  Features: