@@ -11,13 +11,14 @@ search-factory=Search factory
 explanation=Select an item to search
 no-results=No results found
 incorrect-config=At least one checkbox must be selected
-incorrect-type=Select an item or a fluid
 wrong-surface=Can't open map on a different surface
 producers-name=Producers
 storage-name=Storage
 ground-items-name=Ground
 entities-name=Entities
+signals-name=Signals
 producers-tooltip=Search for machines that produce this item\n(e.g. __1__)
 storage-tooltip=Search for containers that contain this item\n(e.g. __1__)
 ground-items-tooltip=Search for this item on the ground
 entities-tooltip=Search for built entities of this item
+signals-tooltip=Search for entities that are sending this signal\n(limited to these types: __1__)
